--- a/src/components/article.css
+++ b/src/components/article.css
@@ -1,58 +1,17 @@
 .article {
-  position: relative;
-  width: 33.3333%;
-  background-size: cover;
-  background-position: center center;
-  min-height: 50vh;
-  padding: 20px;
-  color: #fff;
-}
-
-@media (max-width: 1024px) {
-  .article {
-    width: 50%;
-  }
-}
-
-@media (max-width: 668px) {
-  .article {
-    width: 100%;
-    min-height: 100vh;
-  }
-}
-
-.moreDetails {
-  display: none;
-}
-
-.moreDetails svg {
-  width: 80px;
-  transition: all 1s ease-in-out;
-}
-
-.moreDetails svg:hover {
-  transform: scale(1.2); 
-}
-
-.moreDetails svg path {
-  fill: red;
-  transition: fill 0.3s ease-in-out;
-}
-
-.moreDetails svg:hover path {
-  fill: white;
-}
-
-.article:hover .moreDetails {
+  height: 300px;
+  border: 2px solid black;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
-  position: absolute;
-  color: #fff;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background: rgba(0,0,0,0.5);
-  padding: 20px;
+}
+.card {
+  width: 100%;
+  height: 50%;
+  object-fit: cover;
+}
+.article h1 {
+  font-size: 1em;
+  overflow: hidden;
 }
